src/App.css
body {
  margin: 0 auto;
  position: relative;
  text-align: center;
  color: rgb(0, 255, 0);
  /* font-family: */
}

#root {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url('./assets/bg.jpeg');
  background-size: cover;
  background-position: center;
  z-index: -1;
}

.logo-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  margin-top: 40px;
}

.logo {
  margin: 20px;
  height: 120px;
}

.logo-dips {
  padding-top: 10px;
}

@media (max-width: 768px) {
  .logo {
    height: 80px;
  }
}

.logo-sm {
  width: 80vw;
  margin-bottom: 5vh;
}

/* @media (max-width: 768px) {
  .dips-container {
    padding: 4vw;
  }
  .dips-container img {
    width: 42vw;
  }
} */

.dips-container-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
}

.dips-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  background-color: #ffffff99;
  gap: 10px;
  margin: 60px 0;
  padding: 30px;
  border-radius: 150px;
  /* width: 630px; */
}

.dips-container img {
  width: 300px;
}

@media (max-width: 768px) {
  .dips-container {
    padding: 4vw;
  }
  .dips-container img {
    width: 42vw;
  }
}

.gaba-ghanoush {
  border-radius: 120px 15px 15px 15px;
}
.guaca-sophie {
  border-radius: 15px 120px 15px 15px;
}
.pickle-lilley {
  border-radius: 15px 15px 15px 120px;
}
.tom-ato-salsa {
  border-radius: 15px 15px 120px 15px;
}

.info {
  height: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: black;
  margin: 0 16px 60px;
  padding: 2rem 2rem;
  max-width: 1200px;
  box-sizing: border-box;
}

.bio {
  max-width: 600px;
  padding: 32px;
}

.video {
  height: 600px;
  width: 900px;
  margin: 0 2.5vh 5vh 2.5vh;
}

@media (max-width: 900px) {
  .video {
    height: 60vw;
    width: 90vw;
  }
}

.contact-links-container p {
  /* padding-inline: 1rem; */
} 

/* Typography */

h2 {
  font-size: 2rem;
}

p {  
  font-size: 1.2rem;
}

a {
  color: rgb(255, 0, 102);
  padding-left: 10px;
}

a:hover {
  color: rgb(255, 96, 131);
}

